--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Esse app foi desenvolvido na semana Spring React"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>UtsVendas</title>
+    <meta charset="utf-8" 
+    name="description"
+    content="Esse app foi desenvolvido na Semana Spring React"/>
+    <title>UTSvendas</title>
   </head>
   <body>
-    <noscript>Voce precisa abilitar o java script para rodar esse app </noscript>
+    <noscript>YVoce precisa abilitar o java script para rodar esse app.</noscript>
     <div id="root"></div>
   
   </body>
